worked 80/80 withe comments and divided to headers

--- a/t1q1/t1q1.vcxproj.filters
+++ b/t1q1/t1q1.vcxproj.filters
@@ -15,10 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\t1q1.cpp">
+    <ClCompile Include="Rational.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Rational.cpp">
+    <ClCompile Include="t1q1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
