--- a/t1q1/t1q1.vcxproj
+++ b/t1q1/t1q1.vcxproj
@@ -123,8 +123,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\t1q1.cpp" />
     <ClCompile Include="Rational.cpp" />
+    <ClCompile Include="t1q1.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Rational.h" />
