--- a/t1q3/t1q3.vcxproj
+++ b/t1q3/t1q3.vcxproj
@@ -123,7 +123,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\t1q3.cpp" />
+    <ClCompile Include="Circle.cpp" />
+    <ClCompile Include="point.cpp" />
+    <ClCompile Include="t1q3.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Circle.h" />
+    <ClInclude Include="point.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
